--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
           <img class="img" src="./assets/77.jpg" alt="" />
         </div>
         <div class="date">
-          <h3 id="date">date</h3>
           <h3>rumble</h3>
         </div>
         <div class="display-screen">
@@ -1931,13 +1930,13 @@
             </div>
             <div class="socials">
               <a href="#">
-                <img src="./social/fb3.png" alt="" />
+                <i class="fab fa-facebook-square"></i>
               </a>
-              <a href="https://twitter.com/folaJo_seph">
-                <img src="./social/twitter3.png" alt="" />
+              <a target="_blank" rel="noopener" href="https://twitter.com/techfolaa">
+                <i class="fab fa-twitter-square"></i>
               </a>
-              <a href="https://github.com/JosephAfolabi">
-                <img src="./social/github.png" alt="" />
+              <a target="_blank" rel="noopener" href="https://github.com/JosephAfolabi">
+                <i class="fab fa-github"></i>
               </a>
             </div>
             <p class="copyright">&copy; 2020, rumble</p>
